fix margins and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .choice {
-  height: 25vh;
+  top: 15rem;
   display: flex;
   justify-content: center;
 }
@@ -48,15 +48,16 @@
 .button {
   width: 150px;
   height: 50px;
-  justify-content: space-around;
   align-items: center;
   background-color: tan;
   font-size: 20px;
   border-radius: 5px;
   cursor: pointer;
   margin-top: 5rem;
+  display: fixed;
+  top: 50rem;
 }
 
 .result {
-  margin: 2rem;
+  margin: 1rem;
 }
